# Nyaya-Portal

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  inference.py  metadata.json  openenv.yaml  openenv_tasks.json  package.json  pyproject.toml  requirements.txt  server.ts  setup.py  tasks.json  tasks.yaml
graders/: __init__.py  easy_case_lookup.py  hard_cross_docket_review.py  medium_backlog_triage.py
openai/: __init__.py
server/: __init__.py  app.py
src/: App.tsx  index.css
src/data/: cases.ts
src/utils/: openenv_utils.ts
