[project]
name = "nyaya-portal-openenv"
version = "0.1.0"
description = "OpenEnv compatibility layer for Nyaya Portal"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
